@@ -7,7 +7,6 @@ import lombok.NoArgsConstructor;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 
 @Getter
@@ -20,6 +19,7 @@ public class PostResponseDto {
     private String writer; // 게시글 작성자
     private LocalDateTime createdAt; // 게시글 작성시간
     private LocalDateTime modifiedAt; // 게시글 수정시간
+    private Long like;
     private List<CommentResponseDto> commentResponseDtoList; // 게시글에 달린 댓글 리스트
 
 
@@ -30,7 +30,7 @@ public class PostResponseDto {
         this.writer = post.getWriter();
         this.createdAt = post.getCreatedAt();
         this.modifiedAt = post.getModifiedAt();
-        this.commentResponseDtoList = post.getComments().stream().map(CommentResponseDto::new).collect(Collectors.toList()); // stream.map(comment -> CommentResponseDto  과정 추가 필요)
-    //long commentId, String writer, String comment, LocalDateTime createdAt, LocalDateTime modifiedAt
+        this.like = (long) post.getLike().size();
+        this.commentResponseDtoList = post.getComments().stream().map(CommentResponseDto::valueOf).toList(); // stream.map(comment -> CommentResponseDto  과정 추가 필요)
     }
 }
